@@ -34,8 +34,6 @@
 
 #include <boost/format.hpp>
 
-#include <syslog.h>
-
 using std::endl;
 using boost::format;
 using namespace dchroot_dsa;
