@@ -31,8 +31,6 @@
 
 #include <boost/format.hpp>
 
-#include <syslog.h>
-
 using std::endl;
 using boost::format;
 using namespace schroot;
