@@ -1,5 +1,9 @@
 2006-07-10  Roger Leigh  <rleigh@debian.org>
 
+	* Don't include <syslog.h> in sources not using syslog.
+
+2006-07-10  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/schroot-main-base.cc (run_impl): Remove code duplicated
 	in schroot_base::main::run (termios saving and restoring, and
 	exception handling).
